@@ -34,6 +34,8 @@ NOCC 1.4    ?? ??, 200?
     * Improve "To:" address display in message list (Arnaud Boudou).
     * Disable unread icon for POP3 mailboxes (Arnaud Boudou).
     * Some small CSS changes (Arnaud Boudou).
+    * Move "sendButtons" from <TABLE> to <P> for more structured HTML (Tim
+      Gerundt).
 
 NOCC 1.3    January 01, 2007
 
